template titles solved

--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags wagtailcore_tags unicorn %}
 
 {% block title %}
-  Palamo. | 404 - {% trans "Not Found" %}
+  404 - {% trans "Not Found" %}
 {% endblock title %}
 
 {% block content %}
