--- a/core/templates/address/client_address_create_view.html
+++ b/core/templates/address/client_address_create_view.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-{% trans "New Address" %} | {{request.user.first_name}} {{request.user.last_name}}
+    {% trans "New Address" %}
 {% endblock title %}
 
 {% block content %}
