--- a/core/templates/home/generic_page.html
+++ b/core/templates/home/generic_page.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailcore_tags wagtailimages_tags %}
 
 {% block title %}
-Palamo. | {{page.title}}
+  {{page.title}}
 {% endblock title %}
 
 {% block extra_css %}
