--- a/core/templates/product/product_index.html
+++ b/core/templates/product/product_index.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags %}
 
 {% block title %}
-  Palamo. | {% trans "Your Gift Shop" %}
+  {% trans "Your Gift Shop" %}
 {% endblock title %}
 
 {% block content %}
