--- a/core/templates/product/product_list_view.html
+++ b/core/templates/product/product_list_view.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags %}
 
 {% block title %}
-  Palamo. | {% trans "Our Products" %}
+  {% trans "Our Products" %}
 {% endblock title %}
 
 {% block content %}
