--- a/core/templates/registration/password_change_done.html
+++ b/core/templates/registration/password_change_done.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-    Palamo. | {% trans "Password Change Done" %}
+  {% trans "Password Change Done" %}
 {% endblock title %}
 
 {% block content %}
