--- a/core/templates/registration/password_change_form.html
+++ b/core/templates/registration/password_change_form.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-  Palamo. | {% trans "Change My Password" %} 
+    {% trans "Change My Password" %} 
 {% endblock title %}
 
 {% block content %}
