--- a/core/templates/registration/password_reset_complete.html
+++ b/core/templates/registration/password_reset_complete.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-    Palamo. | {% trans "Password Reset Complete" %}
+  {% trans "Password Reset Complete" %}
 {% endblock title %}
 
 {% block content %}
