--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-    Palamo. | {% trans "Password Reset" %}
+    {% trans "Password Reset" %}
 {% endblock title %}
 
 {% block content %}
