--- a/core/templates/registration/user_profile.html
+++ b/core/templates/registration/user_profile.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-    {% trans "My Profile" %} | {{request.user.first_name}} {{request.user.last_name}}
+    {% trans "My Profile" %}
 {% endblock title %}
 
 {% block content %}
