--- a/core/templates/registration/user_signup.html
+++ b/core/templates/registration/user_signup.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-Palamo. | {% trans "Sign In" %}
+  {% trans "Sign In" %}
 {% endblock title %}
 
 {% block content %}
