--- a/core/templates/500.html
+++ b/core/templates/500.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <title>505 - Server error</title>
+    <title>500 Server Error</title>
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/main.css' %}">
   <body>
     <div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/500_magi.gif' %})">
