--- a/core/templates/address/client_address_delete_view.html
+++ b/core/templates/address/client_address_delete_view.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Delete Address" %} | {{request.user.first_name}} {{request.user.last_name}}
+    {% trans "Delete Address" %}
 {% endblock title %}
 
 {% block content %}
