--- a/core/templates/address/client_address_list_view.html
+++ b/core/templates/address/client_address_list_view.html
@@ -2,7 +2,9 @@
 
 {% load static i18n %}
 
-{% block title %}{% trans "My Addresses" %} | {{request.user.first_name}} {{request.user.last_name}}{% endblock title %}
+{% block title %}
+    {% trans "My Addresses" %}
+{% endblock title %}
 
 {% block content %}
 <div class="hero h-96" style="background-image: url({% static 'core/assets/img/address_view_wallpaper.jpg' %});">
