--- a/core/templates/address/client_address_update_view.html
+++ b/core/templates/address/client_address_update_view.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 
 {% block title %}
-Editar Dirección de {{request.user.first_name}} {{request.user.last_name}}
+    {% trans "Edit Address" %}
 {% endblock title %}
 
 {% block content %}
