--- a/core/templates/basket/basket_list_view.html
+++ b/core/templates/basket/basket_list_view.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags unicorn %}
 
 {% block title %}
-  Palamo. {% if request.user.is_authenticated %} | {% trans "Basket of" %} {{request.user.email}}{% endif %}
+    {% trans "Basket of" %} {{request.user.email}}{% endif %}
 {% endblock title %}
 
 {% block content %}
