--- a/core/templates/product/components/product_card.html
+++ b/core/templates/product/components/product_card.html
@@ -2,7 +2,12 @@
 
 <div class="card bg-base-100 shadow-xl w-full md:w-2/5  lg:w-1/4">
     {% image selected_product.product_images.all.0.carousel_image fill-500x500 as img %}
-    <figure><img src="{{img.url}}" alt="{{img.alt}}"></figure>
+    {% image selected_product.product_images.all.0.carousel_image fill-500x500 format-webp as img_webp %}
+    <figure>
+        <source srcset="{{img_webp.url}}" type="image/webp">
+        <source srcset="{{img.url}}" type="image/jpeg"> 
+        <img src="{{img.url}}" alt="{{selected_product.name}} Image">
+    </figure>
     <div class="card-body">
         <h2 class="card-title">{{selected_product.name}}</h2>
         <p class="font-light">{% trans "Price" %}: ${{selected_product.price}} MXN</p>
