--- a/core/templates/address/client_address_list_view.html
+++ b/core/templates/address/client_address_list_view.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="hero h-96" style="background-image: url({% static 'core/assets/img/address_view_wallpaper.jpg' %});">
+<div class="hero h-96" style="background-image: url({% static 'core/assets/img/address_view_wallpaper.webp' %});">
     <div class="hero-overlay bg-opacity-60"></div>
     <div class="hero-content text-center text-neutral-content">
       <div class="max-w-md">
