--- a/core/templates/basket/basket_list_view.html
+++ b/core/templates/basket/basket_list_view.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="hero h-96 bg-cover" style="background-image: url({% static 'core/assets/img/profile_edit_wallpaper.jpg' %});">
+<div class="hero h-96 bg-cover" style="background-image: url({% static 'core/assets/img/profile_edit_wallpaper.webp' %});">
     <div class="hero-overlay bg-opacity-60"></div>
     <div class="hero-content text-center text-neutral-content">
       <div class="max-w-md">
@@ -20,7 +20,7 @@
         <h1 class="text-3xl font-bold mb-10">{% trans "My Basket" %}</h1>
         {% if basket.product_basket.all %}
             {% for product_basket in basket.product_basket.all %}
-                {% image product_basket.product.product_images.all.0.carousel_image fill-500x500 as product_image %}
+                {% image product_basket.product.product_images.all.0.carousel_image fill-500x500 format-webp as product_image %}
                 {% if not forloop.first %}
                     {% unicorn 'basket.product' product_id=product_basket.product.id product_url=product_basket.product.url product_name=product_basket.product.name product_image=product_image.url product_quantity=product_basket.quantity product_price=product_basket.product.price extra_class='pt-5 border-t border-neutral-content' %}
                 {% else %}
