--- a/core/templates/layouts/components/navbar.html
+++ b/core/templates/layouts/components/navbar.html
@@ -24,7 +24,7 @@
                {% if request.user.is_authenticated and request.user.wagtail_userprofile.avatar %}
                   <img src="{{request.user.wagtail_userprofile.avatar.url}}">
                {% else %}
-                  <img src="{% static 'core/assets/img/avatar.png' %}">
+                  <img src="{% static 'core/assets/img/avatar.webp' %}">
                {% endif %}
             </div>
          </label>
