--- a/core/templates/product/product_index.html
+++ b/core/templates/product/product_index.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="relative top-0 left-0 hero h-screen" style="background-image: url({% static 'core/assets/img/index_wallpaper.jpg' %});">
+<div class="relative top-0 left-0 hero h-screen" style="background-image: url({% static 'core/assets/img/index_wallpaper.webp' %});">
     <div class="hero-overlay bg-opacity-60 md:bg-opacity-0"></div>
     <div class="w-full px-12 text-center text-neutral-content md:text-left">
       <div class="flex flex-col w-full justify-center md:justify-start md:w-1/2 lg:w-1/3">
