--- a/core/templates/registration/user_signup.html
+++ b/core/templates/registration/user_signup.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="relative top-0 left-0 hero h-screen" style="background-image: url('{% static 'core/assets/img/signup_wallpaper.jpg' %}');">
+<div class="relative top-0 left-0 hero h-screen" style="background-image: url('{% static 'core/assets/img/signup_wallpaper.webp' %}');">
     <div class="hero-overlay bg-opacity-40"></div>
     <div class="w-full px-2 text-center text-neutral-content md:px-12 md:text-left">
       <div class="flex w-full">
