solution 404: images not in static

--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/404_desert.jpg' %})">
+<div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/404_desert.webp' %})">
     <div class="hero-overlay bg-opacity-60"></div>
     <div class="hero-content text-center text-neutral-content">
       <div class="max-w-md">
