--- a/core/templates/500.html
+++ b/core/templates/500.html
@@ -10,7 +10,7 @@
     <title>500 Server Error</title>
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/main.css' %}">
   <body>
-    <div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/500_magi.gif' %})">
+    <div class="hero h-screen bg-cover" style="background-image: url({% static 'core/assets/img/500_magi.webp' %})">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
