--- a/core/templates/registration/user_profile.html
+++ b/core/templates/registration/user_profile.html
@@ -18,7 +18,7 @@
 <div class="w-full px-4 py-24 flex flex-wrap justify-center items-center bg-secondary-focus md:px-8">
     <h2 class="text-2xl font-bold font-serif text-center card-title">{% trans "Welcome" %}</h2>
     <div class="w-full flex flex-col justify-center items-center md:mt-4 md:flex-row">
-        <img class="w-32 h-32 rounded-full object-cover my-4 md:my-0" src="{% if user.wagtail_userprofile.avatar %}{{user.wagtail_userprofile.avatar.url}}{% else %}{% static 'core/assets/img/avatar.png' %}{% endif %}">
+        <img class="w-32 h-32 rounded-full object-cover my-4 md:my-0" src="{% if user.wagtail_userprofile.avatar %}{{user.wagtail_userprofile.avatar.url}}{% else %}{% static 'core/assets/img/avatar.webp' %}{% endif %}">
         <div class="flex flex-wrap flex-col ml-0 mt-4 md:ml-10 md:mt-0"> 
             <div class="flex items-center mb-4">
                 <div class="badge badge-outline mr-5">{% trans "Full Name" %}</div>
