--- a/core/templates/registration/user_profile_edit.html
+++ b/core/templates/registration/user_profile_edit.html
@@ -19,7 +19,7 @@
 <form method="POST" action="{% url 'profile:edit' %}" enctype="multipart/form-data" novalidate class="w-full px-4 py-10 flex flex-wrap justify-evenly items-center bg-secondary-focus md:px-8">
     <div class="flex flex-col items-center mb-4 md:mb-0">
         <div class="shrink-0">
-          <img class="h-40 w-40 object-cover rounded-full" src="{% if user.wagtail_userprofile.avatar %}{{user.wagtail_userprofile.avatar.url}}{% else %}{% static 'core/assets/img/avatar.png' %}{% endif %}" alt="Current profile photo">
+          <img class="h-40 w-40 object-cover rounded-full" src="{% if user.wagtail_userprofile.avatar %}{{user.wagtail_userprofile.avatar.url}}{% else %}{% static 'core/assets/img/avatar.webp' %}{% endif %}" alt="Current profile photo">
         </div>
         <label class="block mt-5 transition-all ease-in-out duration-300"><span class="sr-only">{% trans "Choose profile photo" %}</span>
             <input class="block w-full text-sm text-neutral-content file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-primary-content file:text-neutral-content hover:file:bg-neutral-focus" type="file" id="{{form.avatar.name}}" name="{{form.avatar.name}}" >
