bug in basket list html

--- a/core/templates/basket/basket_list_view.html
+++ b/core/templates/basket/basket_list_view.html
@@ -3,7 +3,7 @@
 {% load static i18n wagtailimages_tags unicorn %}
 
 {% block title %}
-    {% trans "Basket of" %} {{request.user.email}}{% endif %}
+    {% trans "Basket of" %} {{request.user.email}}
 {% endblock title %}
 
 {% block content %}
